@@ -55,7 +55,7 @@ Term match                terms/<prefix>*                               /botany/
 ------------------------ ---------------------------------------------- ---------------------------------
 Synonyms                 /dbs/<db_name>/synonyms/<original>             /botany/synonyms/fungus
 ------------------------ ---------------------------------------------- ---------------------------------
-Search [#chk]_           /dbs/<db_name>/search/?<query>                 /botany/search/?query=xylem
+Search                   /dbs/<db_name>/search/?<query>                 /botany/search/?query=xylem
 ------------------------ ---------------------------------------------- ---------------------------------
 Replay Log               /dbs/<db_name>/log                             /botany/log
 ======================== ============================================== =================================
