@@ -1,3 +1,7 @@
+Sat May 09 11:42:23 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* docs/api.rst,flax/searchserver/application.py: Add version prefix.
+
 Sat May 09 08:17:43 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* flax/searchserver/backends/xappy_backend.py: Remove unwanted
